--- a/client/package.json
+++ b/client/package.json
@@ -25,10 +25,10 @@
     "babel-plugin-transform-object-rest-spread": "6.23.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
-    "css-loader": "0.28.4",
+    "css-loader": "^0.28.4",
     "date-fns": "^2.22.1",
     "live-server": "^1.2.1",
-    "moment": "2",
+    "moment": "^2.29.1",
     "node-sass": "4",
     "normalize.css": "^8.0.1",
     "numeral": "^2.0.6",
@@ -44,7 +44,8 @@
     "redux-thunk": "^2.3.0",
     "rsuite": "^4.10.2",
     "sass-loader": "6",
-    "style-loader": "0.18.2",
+    "style-loader": "^0.18.2",
+    "update": "^0.7.4",
     "uuid": "3",
     "validator": "8",
     "webpack": "3.1.0",
